--- a/frontend/index.html
+++ b/frontend/index.html
@@ -105,17 +105,15 @@
     <div class="container mt-5" id="task-app-container" style="display: none">
       <h1 class="text-center title">Task Management Application</h1>
 
-      <!-- Pending Tasks Section -->
-      <h4>Pending Tasks</h4>
+      <!-- Task Lists -->
+      <h4>Pending Tasks <span id="pending-count" class="badge bg-warning ms-2">0</span></h4>
       <ul id="pending-task-list" class="list-group mb-4">
-        <!-- Pending tasks will be inserted here -->
-      </ul>
+        </ul>
 
-      <!-- Completed Tasks Section -->
-      <h4>Completed Tasks</h4>
+      <!-- Completed Tasks -->
+      <h4>Completed Tasks <span id="completed-count" class="badge bg-success ms-2">0</span></h4>
       <ul id="completed-task-list" class="list-group">
-        <!-- Completed tasks will be inserted here -->
-      </ul>
+        </ul>
 
       <button class="btn btn-primary mt-4" data-bs-toggle="modal" data-bs-target="#taskModal">Add Task</button>
     </div>
